// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavPills highlights the active pill in dark theme 1`] = `
<View
  accessibilityRole="tablist"
  style={
    [
      {
        "flexDirection": "row",
        "gap": 4,
      },
      null,
    ]
  }
  testID="nav"
>
  <View
    accessibilityLabel="Modules"
    accessibilityRole="tab"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": true,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={null}
    testID="nav-modules"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 10,
            "justifyContent": "center",
            "minHeight": 44,
            "paddingHorizontal": 10,
            "paddingVertical": 5,
          },
          {
            "backgroundColor": "#003C36",
          },
          {
            "opacity": 1,
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#00C2A8",
              "fontFamily": "System",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 16,
              "textAlign": "auto",
            },
            {
              "fontSize": 12,
            },
          ]
        }
      >
        Modules
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Settings"
    accessibilityRole="tab"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={null}
    testID="nav-settings"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 10,
            "justifyContent": "center",
            "minHeight": 44,
            "paddingHorizontal": 10,
            "paddingVertical": 5,
          },
          null,
          {
            "opacity": 1,
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#8B949E",
              "fontFamily": "System",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 16,
              "textAlign": "auto",
            },
            {
              "fontSize": 12,
            },
          ]
        }
      >
        Settings
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="About"
    accessibilityRole="tab"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={null}
    testID="nav-about"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 10,
            "justifyContent": "center",
            "minHeight": 44,
            "paddingHorizontal": 10,
            "paddingVertical": 5,
          },
          null,
          {
            "opacity": 1,
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#8B949E",
              "fontFamily": "System",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 16,
              "textAlign": "auto",
            },
            {
              "fontSize": 12,
            },
          ]
        }
      >
        About
      </Text>
    </View>
  </View>
</View>
`;

exports[`NavPills renders in light theme 1`] = `
<View
  accessibilityRole="tablist"
  style={
    [
      {
        "flexDirection": "row",
        "gap": 4,
      },
      null,
    ]
  }
  testID="nav"
>
  <View
    accessibilityLabel="Modules"
    accessibilityRole="tab"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={null}
    testID="nav-modules"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 10,
            "justifyContent": "center",
            "minHeight": 44,
            "paddingHorizontal": 10,
            "paddingVertical": 5,
          },
          null,
          {
            "opacity": 1,
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#4B5563",
              "fontFamily": "System",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 16,
              "textAlign": "auto",
            },
            {
              "fontSize": 12,
            },
          ]
        }
      >
        Modules
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="Settings"
    accessibilityRole="tab"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": true,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={null}
    testID="nav-settings"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 10,
            "justifyContent": "center",
            "minHeight": 44,
            "paddingHorizontal": 10,
            "paddingVertical": 5,
          },
          {
            "backgroundColor": "#DEF7F3",
          },
          {
            "opacity": 1,
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#00C2A8",
              "fontFamily": "System",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 16,
              "textAlign": "auto",
            },
            {
              "fontSize": 12,
            },
          ]
        }
      >
        Settings
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="About"
    accessibilityRole="tab"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": false,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={null}
    testID="nav-about"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 10,
            "justifyContent": "center",
            "minHeight": 44,
            "paddingHorizontal": 10,
            "paddingVertical": 5,
          },
          null,
          {
            "opacity": 1,
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#4B5563",
              "fontFamily": "System",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 16,
              "textAlign": "auto",
            },
            {
              "fontSize": 12,
            },
          ]
        }
      >
        About
      </Text>
    </View>
  </View>
</View>
`;
